--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en"> 
+  <head>
+    <title>sapp html</title>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <header class="container group">
+      <div id="header">
+        <nav>
+  <a class="logo" href="index.html"><img src="images/sapp-logo.png" alt="Iron io logo" height="70" width="150"/></a>
+  </nav>
+    </header> 
+      <section class="hero container header"> <!-- Banner area-->
+         <h1>The Sticky Sorting App</h1> 
+         <h2>simple organization, easy access, and smart retrieve</h2>
+      </section> 
+ <section class="row-alt"><!--coders and enterprize-->      
+    <div class="lead container">
+      <h3>be notified when we launch</h3>
+      <form>
+         <input placeholder="email address + enter" type="text" name="email" onSubmit="Thanks">
+    </form>
+</section>  
+  </body>
+</html>  
